--- a/src/main/java/nuevoFormulario/Formulario.form
+++ b/src/main/java/nuevoFormulario/Formulario.form
@@ -331,6 +331,7 @@
     <Component class="javax.swing.JTextField" name="niflText">
       <Events>
         <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="niflTextCaretUpdate"/>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="niflTextFocusLost"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="niflTextActionPerformed"/>
       </Events>
     </Component>
